# domain-tracker

./: .gitignore  LICENSE  README.md  energetics_tracking.ipynb  environment.yml  gif_maker.ipynb  plot_chron.ipynb  pyproject.toml  requirements.txt  tracker.py  tracker_contours.py  tracker_mag.py  tracker_plotting.py  tracker_utils.py
notebooks/: plot_chron.ipynb
src/domain_tracker/: __init__.py  tracker.py  tracker_contours.py  tracker_dilate.py  tracker_mag.py  tracker_plotting.py  tracker_properties.py
