[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "domain_tracker"
version = "0.1.0"
description = "Takes micromagnetic simulation output (.ovf files) and scrapes for perpendicular domains and their properties."
authors = ["Jacques Reddinger <jareddi98@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.12.0"
packages = [
    { include = "domain_tracker", from = "src" }
]

[tool.poetry.dependencies]
numpy = ">=1.24"
scipy = "^1.0"
vtk = "^9.4"
pyvista = { version = "==0.46.3", extras = ["jupyter"] }
opencv-python = ">=4.12"
ovf2io = "^0.10"